# pepgm-gui

./: .gitignore  LICENSE.md  README.md  environment.yml  launch_ui  setup.cfg  setup.py  ui.py
pepgm-gui/: .gitignore  __init__.py
pepgm-gui/config/: config.yaml  to_be_renamed_before_push.yaml
pepgm-gui/ui/: const.yaml  pepgm.py  workers.py
pepgm-gui/ui/style/: package.json
pepgm-gui/ui/style/docs/: accordions.html  buttons.html  cards.html  classless.html  containers.html  customization.html  (+15 more)
pepgm-gui/ui/templates/: index.html
pepgm-gui/workflow/: Snakefile
pepgm-gui/workflow/envs/: graphenv.yml
pepgm-gui/workflow/rules/: filterHostCrap.smk  searchgui+pepshaker.smk
pepgm-gui/workflow/scripts/: BarPlotResults.py  CountProteins.py  FactorGraphGeneration.py  LoadSimplePSMResults.py  PepGM.py  belief_propagation.py  filterHostSpectra.py  getTargets.py  hashDatabase.py
src/pepgm_gui/: .gitignore
src/pepgm_gui/config/: config.yaml  config_for_testing.yaml  test.yaml
src/pepgm_gui/ui/: pepgm.py  workers.py
src/pepgm_gui/workflow/: Snakefile
style/docs/: accordions.html  buttons.html  cards.html  classless.html  containers.html  customization.html  dropdowns.html  forms.html  navs.html  rtl.html  scroller.html  tooltips.html
style/docs/src/: _footer.html  _head.html  _nav.html  _sidebar.html  buttons.html  classless.html  loading.html  navs.html  themes.html
workflow/rules/: buildDatabase.smk
workflow/scripts/: BarPlotResults.py  CountProteins.py  CreatePepGMGraph.py  FactorGraphGeneration.py  PepGM.py  filterHostSpectra.py  hashDatabase.py
(+36 files in other folders)
