[metadata]
name = pepgm-gui
version = 0.0.2
author = Franziska Kistner
author_email = ziska.kistner@gmail.com
description = A PepGM User Interface
long_description = file: README.md
url = https://github.com/ziskaki/pepgm-gui
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: Linux

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where = src

